--- a/terraform-aws-project/templates/db-deploy.tmpl
+++ b/terraform-aws-project/templates/db-deploy.tmpl
@@ -1,5 +1,5 @@
 sudo apt update
 sudo apt install git mysql-client -y
-git clone -b vp-rem https://github.com/devopshydclub/vprofile-project.git
+git clone -b terraform https://github.com/sujanmj/Project.git
 mysql -h ${rds-endpoint} -u ${dbuser} --password=${dbpass} accounts --ssl-mode=DISABLED < /home/ubuntu/vprofile-project/src/main/resources/db_backup.sql
 
